--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
         "@nestjs/core": "^9.0.0",
         "@nestjs/platform-express": "^9.0.0",
         "@nestjs/schedule": "^2.2.1",
+        "crawlee": "^3.3.1",
+        "playwright": "^1.32.3",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^7.2.0"
     },
