--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "private": true,
     "license": "UNLICENSED",
     "scripts": {
-        "prebuild": "npm i playwright",
         "build": "nest build",
         "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
         "start": "nest start",
@@ -16,14 +15,15 @@
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
     },
     "dependencies": {
+        "@nestjs/axios": "^2.0.0",
         "@nestjs/common": "^9.0.0",
         "@nestjs/core": "^9.0.0",
         "@nestjs/platform-express": "^9.0.0",
         "@nestjs/schedule": "^2.2.1",
-        "crawlee": "^3.3.1",
-        "playwright": "^1.32.3",
+        "axios": "^1.3.6",
         "reflect-metadata": "^0.1.13",
-        "rxjs": "^7.2.0"
+        "rxjs": "^7.2.0",
+        "set-cookie-parser": "^2.6.0"
     },
     "devDependencies": {
         "@nestjs/cli": "^9.0.0",
@@ -33,6 +33,7 @@
         "@types/express": "^4.17.13",
         "@types/jest": "29.5.0",
         "@types/node": "18.15.11",
+        "@types/set-cookie-parser": "^2.4.2",
         "@types/supertest": "^2.0.11",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
         "@typescript-eslint/parser": "^5.0.0",
