--- a/package.json
+++ b/package.json
@@ -12,18 +12,28 @@
         "start:dev": "nest start --watch",
         "start:debug": "nest start --debug --watch",
         "start:prod": "node dist/main",
-        "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
+        "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+        "db:generate": "typeorm-ts-node-commonjs migration:generate src/database/migration/script -d src/database/database.source.ts -p",
+        "db:migrate": "typeorm-ts-node-commonjs migration:run -d src/database/database.source.ts",
+        "db:revert": "typeorm-ts-node-commonjs migration:revert -d src/database/database.source.ts",
+        "db:show": "typeorm-ts-node-commonjs migration:show -d src/database/database.source.ts"
     },
     "dependencies": {
         "@nestjs/axios": "^2.0.0",
         "@nestjs/common": "^9.0.0",
+        "@nestjs/config": "^2.3.1",
         "@nestjs/core": "^9.0.0",
         "@nestjs/platform-express": "^9.0.0",
         "@nestjs/schedule": "^2.2.1",
+        "@nestjs/typeorm": "^9.0.1",
         "axios": "^1.3.6",
+        "dotenv": "^16.0.3",
+        "pg": "^8.10.0",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^7.2.0",
-        "set-cookie-parser": "^2.6.0"
+        "set-cookie-parser": "^2.6.0",
+        "typeorm": "^0.3.15",
+        "typeorm-naming-strategies": "^4.1.0"
     },
     "devDependencies": {
         "@nestjs/cli": "^9.0.0",
