--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "start:dev": "nest start --watch",
         "start:debug": "nest start --debug --watch",
         "start:prod": "node dist/main",
-        "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+        "lint": "eslint \"src/**/*.ts\" --fix",
         "db:generate": "typeorm-ts-node-commonjs migration:generate src/database/migration/script -d src/database/database.source.ts -p",
         "db:migrate": "typeorm-ts-node-commonjs migration:run -d src/database/database.source.ts",
         "db:revert": "typeorm-ts-node-commonjs migration:revert -d src/database/database.source.ts",
