--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "@nestjs/axios": "^2.0.0",
+        "@nestjs/bull": "^0.6.3",
         "@nestjs/common": "^9.0.0",
         "@nestjs/config": "^2.3.1",
         "@nestjs/core": "^9.0.0",
@@ -27,6 +28,7 @@
         "@nestjs/schedule": "^2.2.1",
         "@nestjs/typeorm": "^9.0.1",
         "axios": "^1.3.6",
+        "bull": "^4.10.4",
         "dotenv": "^16.0.3",
         "pg": "^8.10.0",
         "reflect-metadata": "^0.1.13",
